--- a/src/Pantallas/LogIn/LoginProfesor.form
+++ b/src/Pantallas/LogIn/LoginProfesor.form
@@ -36,7 +36,7 @@
     <Container class="javax.swing.JPanel" name="jPanel1">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="33" red="66" type="rgb"/>
+          <Color blue="55" green="2a" red="3f" type="rgb"/>
         </Property>
       </Properties>
 
